--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,4 +6,9 @@ body{
   background-color: rgb(187, 234, 250);
 
 }
-
+.map{
+  width: 100%;
+  height: 500px;
+  border-style: unset;
+  border-radius: 10px;
+}
