--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,14 +1,5 @@
-/**/
-*{
-  margin:2px;
-  }
-body{
-  background-color: rgb(187, 234, 250);
-
-}
-.map{
+.imagem1{
+  float: center;
   width: 100%;
-  height: 500px;
-  border-style: unset;
-  border-radius: 10px;
+  height: 300px;
 }
